fix(ui): adjust gap and box model props

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,13 +1,16 @@
 .footer {
     display: flex;
     flex-direction: column;
+    gap: 10px;
     align-items: center;
-    padding: 20px;
+    padding: 10px 20px;
 }
 
 .footer__copyright {
-    color: var(--font-color-inverse);
-    text-align: center;
+  margin: 0;
+
+  color: var(--font-color-inverse);
+  text-align: center;
 }
 
 .footer__link {
